scrollbar style adjust and temp fix to modal width

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,6 @@ body {
 
 @layer components {
   .scroll {
-    @apply scrollbar-thin scrollbar-track-primaryhover scrollbar-thumb-primary scrollbar-thumb-rounded-full;
+    @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-primary scrollbar-thumb-rounded-full hover:scrollbar-thumb-primaryhover;
   }
 }
